Thu Dec 21 16:45:48 1995  Karl Fogel  <kfogel@occs.cs.oberlin.edu>

        * pcl-cvs.el (cvs-parse-stderr): ignore kerberos connection
        failure, since CVS will automatically try rsh next.  I think this
        is okay because if a person needs to know that kerberos failed,
        then chances are the rsh failed too, and *that* error message will
        clue them in that something's afoot.

Wed Nov 22 11:01:50 1995  Joshua Cowan <jcowan@hermit.reslife.okstate.edu>

        * pcl-cvs.el (cvs-changelog-ours-p): use `user-full-name' if
        `add-log-full-name' unbound, as not every uses the stuff in
        add-log.el.  Same with `add-log-mailing-address'.
        (cvs-changelog-entries): change to `change-log-mode' unless
        already in it.

Sun Jul  9 20:57:11 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * "/bin/rmdir" as default, not "/usr/local/bin/rmdir".

Fri Jun 16 15:24:34 1995  Jim Kingdon  (kingdon@cyclic.com)

	* pcl-cvs.elc, pcl-cvs-lucid.elc: Added.

	* Makefile.in: Rename from Makefile and set srcdir.

Thu May 18 17:10:27 1995  Jim Blandy  <jimb@totoro.bio.indiana.edu>

        Automatically guess CVS log entries from ChangeLog contents.
	* pcl-cvs.el (cvs-mode-changelog-commit): New command.
	(cvs-changelog-full-paragraphs): New variable.
	(cvs-changelog-name, cvs-narrow-changelog,
	cvs-changelog-paragraph, cvs-changelog-subparagraph,
	cvs-changelog-entry, cvs-changelog-ours-p, cvs-relative-path,
	cvs-changelog-entries, cvs-changelog-insert-entries, cvs-union,
	cvs-insert-changelog-entries, cvs-edit-delete-common-indentation):
	New functions.
	(cvs-mode-map): Bind 'C' to cvs-mode-changelog-commit.
	(cvs-mode): Mention cvs-mode-changelog-commit in docstring.

        Give the info files names ending in ".info".
	* Makefile (INFOFILES, install_info): Change pcl-cvs to
	pcl-cvs.info.
	(pcl-cvs.info): Target renamed from pcl-cvs.
	(DISTFILES): pcl-cvs removed; we handle the info files explicitly
	in the dist-dir target.