@@ -1,3 +1,9 @@
+Sat Dec 30 15:01:45 1995  Karl Fogel  <kfogel@floss.cyclic.com>
+
+        * pcl-cvs.el (cvs-changelog-ours-p): check that
+        `add-log-full-name' and `add-log-mailing-address' are non-nil, in
+        addition to checking that they are boundp.
+        
 Thu Dec 21 16:45:48 1995  Karl Fogel  <kfogel@occs.cs.oberlin.edu>
 
         * pcl-cvs.el (cvs-parse-stderr): ignore kerberos connection
